--- a/playbooks/ipa.yml
+++ b/playbooks/ipa.yml
@@ -1,16 +1,23 @@
 ---
-- hosts: all
-  become: true
+- hosts: ipa
+  strategy: free 
+  gather_facts: False
   tasks:
-  - name: Installing Exam Environment Packages
-    yum:
-      name:
-      - httpd
-      - vsftpd
-      - ipa-server
-      - libselinux-python
-      - bind*
-      - ipa-server-dns
+  - name: Installing Environment Packages
+    command: yum install -y ipa-server ipa-server-dns vsftpd
+    async: 500
+    poll: 0
+    register: yum_sleeper
+#  - name: Installing Exam Environment Packages
+#    yum:
+#      name:
+#        - vsftpd
+#        - ipa-server
+#        - ipa-server-dns
+#      state: present
+#      async: 1000
+#      poll: 0
+#      register: yum_sleeper
   - name: Fixing hosts file
     lineinfile:
       dest: /etc/hosts
@@ -24,31 +31,45 @@
   - name: Adding IPA address to hosts file
     lineinfile:
       path: /etc/hosts
-      line: 192.168.55.5 ipa.example.com ipa
+      line: 192.168.55.20 ipa.example.com ipa
       create: yes
-  - name: Adding system1 address to hosts file
+  - name: Adding system1 IP address to hosts file
     lineinfile:
       path: /etc/hosts
-      line: 192.168.55.6 system1.example.com system1
+      line: 192.168.55.21 system1.example.com system1
       create: yes
-  - name: Adding system2 address to hosts file
+  - name: Adding system2 IP address to hosts file
     lineinfile:
       path: /etc/hosts
-      line: 192.168.55.7 system2.example.com system2
-  - name: Configuring IPA server
-    command: ipa-server-install --setup-dns --allow-zone-overlap -a 'password' --hostname=ipa.example.com -r EXAMPLE.COM -p 'password' -n example.com -U --forwarder 8.8.8.8
+      line: 192.168.55.22 system2.example.com system1
+      create: yes
+  - name: Configuring network
+    shell: nmcli con mod "System eth1" ipv4.addresses 192.168.55.20/24 ipv4.gateway 192.168.55.1 ipv4.dns 8.8.8.8 ipv4.dns-search example.com ipv4.method manual
+  - name: --> Not actually failing.. Finishing Environment Package Installation...
+    async_status: jid={{ yum_sleeper.ansible_job_id }}
+    register: job_result
+    until: job_result.finished
+    retries: 16
+  - name: Configuring IPA server (Estimated Time - 5 minutes)
+    command: sudo ipa-server-install --setup-dns --allow-zone-overlap --auto-reverse -a 'password' --hostname=ipa.example.com -r EXAMPLE.COM -p 'password' -n example.com -U --forwarder 8.8.8.8
+    async: 1000
+    poll: 0
+    register: ipa_config_sleeper
+    ignore_errors: yes
   - name: Enabling services
     service: name={{item}} enabled=true
     with_items:
       - httpd
       - vsftpd
       - firewalld
-  - name: Starting services
-    service: name={{item}} state=started
-    with_items:
-      - vsftpd
-      - firewalld
-  - name: Allowing Firewall Services
+  - name: Starting Firewalld
+    service: name=firewalld state=started
+  - name: Enabling Firewall Services
     command: firewall-cmd --permanent --add-service=http --add-service=https --add-service=ntp --add-service=dns --add-service=kerberos --add-service=ldap --add-service=ldaps --add-service=ftp
-  - name: Rebooting machine
-    reboot:
+  - name: Reloading Firewall
+    command: firewall-cmd --reload
+  - name: Still Working On IPA Configuration...It takes time ¯\_(ツ)_/¯
+    async_status: jid={{ ipa_config_sleeper.ansible_job_id }}
+    register: job_result
+    until: job_result.finished
+    retries: 70   
