--- a/playbooks/system2.yml
+++ b/playbooks/system2.yml
@@ -1,6 +1,7 @@
 ---
 - hosts: system2
-  become: true
+  strategy: free 
+  gather_facts: False
   tasks:
   - name: Preparing environment
     shell: rm -rf /etc/yum.repos.d/*
@@ -19,20 +20,11 @@
        gpgcheck=1
        gpgkey=http://reflector.westga.edu/repos/CentOS/7/os/x86_64/RPM-GPG-KEY-CentOS-7
        enabled=1
-  - name: Installing Exam Environment Packages
-    yum:
-      name: 
-      - ipa-server
-      - libselinux-python
-      state: present
-## These would only be needed for using the "expect" module
-#      - epel-release
-#  - name: Installing PIP
-#    yum:
-#      name: python-pip
-#      state: latest
-#  - name: Expect much?
-#    shell: pip --upgrade pip ; pip install --ignore-installed pexpect
+  - name: Installing Environment Packages
+    command: yum install -y ipa-client man-pages
+    async: 500
+    poll: 0
+    register: yum_sleeper
   - name: Disabling services
     selinux:
       state: disabled
@@ -41,34 +33,46 @@
       dest: /etc/hosts
       regexp: '^127\.0\.0\.1'
       state: absent
-  - name: Adding IPA address to hosts file
-    lineinfile:
-      path: /etc/hosts
-      line: 192.168.55.5 ipa.example.com ipa
-      create: yes
-  - name: Adding system1 IP address to hosts file
-    lineinfile:
-      path: /etc/hosts
-      line: 192.168.55.6 system1.example.com system1
-      create: yes
-  - name: Adding system2 IP address to hosts file
-    lineinfile:
-      path: /etc/hosts
-      line: 192.168.55.7 system2.example.com system2
-      create: yes
   - name: Rebuilding host file
     lineinfile:
       path: /etc/hosts
       line: 127.0.0.1   localhost localhost.localdomain localhost4 localhost4.localdomain4
       create: yes
+  - name: Adding IPA address to hosts file
+    lineinfile:
+      path: /etc/hosts
+      line: 192.168.55.20 ipa.example.com ipa
+      create: yes
+  - name: Adding system1 IP address to hosts file
+    lineinfile:
+      path: /etc/hosts
+      line: 192.168.55.21 system1.example.com system1
+      create: yes
+  - name: Adding system2 IP address to hosts file
+    lineinfile:
+      path: /etc/hosts
+      line: 192.168.55.22 system2.example.com system1
+      create: yes
   - name: Configuring network
-    command: nmcli con mod "System enp0s8" ipv4.addresses "192.168.55.7/24 192.168.55.1" ipv4.dns 192.168.55.5 ipv4.dns-search example.com ipv4.method manual
-  - name: Stopping NTP services
-    service: name=ntpd state=stopped
+    command: nmcli con mod "System enp0s8" ipv4.addresses "192.168.55.22/24 192.168.55.1" ipv4.dns 192.168.55.20 ipv4.dns-search example.com ipv4.method manual
+  - name: Saving network config
+    command: nmcli con up "System enp0s8" 
+  - name: Fixing Resolv File
+    command: echo 'nameserver 192.168.55.20' > /etc/resolv.conf
+  - name: Enabling Authconfig
+    command: authconfig --update --enablesssd --enablesssdauth --enablemkhomedir
+  - name: Finishing Environment Package Installation Before IPA Client Configuration
+    async_status: jid={{ yum_sleeper.ansible_job_id }}
+    register: job_result
+    until: job_result.finished
+    retries: 30  
   - name: Configuring IPA client
     #expect:
-    command: ipa-client-install --enable-dns-updates -N --principal admin --server ipa.example.com -w password --hostname=system1.example.com --realm=EXAMPLE.COM --domain=example.com -U
+    command: ipa-client-install --enable-dns-updates --principal admin --server ipa.example.com -w password --hostname=system2.example.com --realm=EXAMPLE.COM --domain=example.com -U
     ignore_errors: yes
+    async: 500
+    poll: 0
+    register: ipa_sleeper
       #responses:
       #  (?i)user: "admin"
       #  (?i)password: "password"
@@ -76,5 +80,11 @@
     service: name=firewalld enabled=true
   - name: Starting services
     service: name=firewalld state=started
+  - name: Finishing IPA client configuration
+    async_status: jid={{ ipa_sleeper.ansible_job_id }}
+    register: job_result
+    until: job_result.finished
+    retries: 35
   - name: Rebooting machine
     reboot:
+      reboot_timeout: 60
