added second disk

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,6 +7,7 @@ system_warnings = false
 command_warnings = false
 callback_whitelist = profile_tasks
 forks = 10
+force_handlers = True
 [ssh_connection]
 pipelining = True
 [privilege_escalation]
