--- a/playbooks/ipa.yml
+++ b/playbooks/ipa.yml
@@ -16,12 +16,12 @@
   - name: Adding IPA address to hosts file
     lineinfile:
       path: /etc/hosts
-      line: 192.168.55.20 ipa.example.com ipa
+      line: 192.168.55.20 ipa.test.example.com ipa
       create: yes
   - name: Adding system1 IP address to hosts file
     lineinfile:
       path: /etc/hosts
-      line: 192.168.55.21 system1.example.com system1
+      line: 192.168.55.21system1.test.example.com system1
       create: yes
   - name: Adding system2 IP address to hosts file
     lineinfile:
@@ -34,9 +34,9 @@
     service: name=firewalld state=started
   - name: Enabling Firewall Services
     command: firewall-cmd --permanent --add-service=http --add-service=https --add-service=ntp --add-service=dns --add-service=kerberos --add-service=ldap --add-service=ldaps --add-service=ftp
-  - name: Reloading Firewall
+  - name: Reloaded Firewall. Installing Environment Packages...
     command: firewall-cmd --reload
-  - name: Installing Environment Packages - Please wait...
+  - name: Environment Packages Installed. Configuring IPA..
     command: yum install -y ipa-server ipa-server-dns vsftpd
 #    async: 500
 #    poll: 0
@@ -47,7 +47,8 @@
 #    until: job_result.finished
 #    retries: 16
   - name: Configuring IPA server (Estimated Time - 7 minutes)
-    command: sudo ipa-server-install --setup-dns --allow-zone-overlap --auto-reverse -a 'password' --hostname=ipa.example.com -r EXAMPLE.COM -p 'password' -n example.com -U --forwarder 8.8.8.8
+    command: sudo ipa-server-install --setup-dns --allow-zone-overlap --auto-reverse -a 'password' --hostname=ipa.test.example.com -r EXAMPLE.COM -p 'password' -n example.com -U --forwarder 8.8.8.8
+    ignore_errors: yes
 #    async: 1000
 #    poll: 0
 #    register: ipa_config_sleeper
