--- a/playbooks/kerberos.yml
+++ b/playbooks/kerberos.yml
@@ -50,3 +50,23 @@
     command: cp /etc/krb5.keytab /var/www/html/system.keytab
   - name: Adjusting Permissions
     command: chmod 0644 /var/www/html/system.keytab
+  - name: Copying Keytab To Apache Server
+    command: cp /etc/krb5.keytab /var/www/html/system.keytab
+  - name: Adjusting Permissions
+    command: chmod 0644 /var/www/html/system.keytab
+  - name: Authenticating KRB5 Database
+    expect:
+      command: kinit admin
+      responses:
+        (.*)Password for admin@EXAMPLE.COM(.*): "password"
+    tags: kerberos
+
+  - name: Accessing Kerberos Database
+    expect:
+      echo: yes
+      timeout: "60"
+      command: sudo kadmin.local
+      responses:
+         (.*)Authenticating as principal admin/admin@EXAMPLE.COM with password(.>): "ktadd nfs/system1.example.com"
+         (.*)kadmin.local(.>): "ktadd nfs/system1.example.com"  
+    tags: kerberos
