--- a/playbooks/system1.yml
+++ b/playbooks/system1.yml
@@ -43,27 +43,27 @@
   - name: Adding IPA address to hosts file
     lineinfile:
       path: /etc/hosts
-      line: 192.168.55.20 ipa.example.com ipa
+      line: 192.168.55.20  ipa.test.example.com ipa
       create: yes
   - name: Adding system1 IP address to hosts file
     lineinfile:
       path: /etc/hosts
-      line: 192.168.55.21 system1.example.com system1
+      line: 192.168.55.21 system1.test.example.com system1
       create: yes
   - name: Adding system2 IP address to hosts file
     lineinfile:
       path: /etc/hosts
-      line: 192.168.55.22 system2.example.com system1
+      line: 192.168.55.22 system2.test.example.com system1
       create: yes
   - name: Configuring network
-    command: nmcli con mod "System enp0s8" ipv4.addresses "192.168.55.21/24 192.168.55.1" ipv4.dns 192.168.55.20 ipv4.dns-search example.com ipv4.method manual
+    command: nmcli con mod "System enp0s8" ipv4.addresses "192.168.55.21/24 192.168.55.1" ipv4.dns 192.168.55.20 ipv4.dns-search test.example.com ipv4.method manual
   - name: Saving network config
     command: nmcli con up "System enp0s8" 
   - name: Fixing Resolv File
     command: echo 'nameserver 192.168.55.20' > /etc/resolv.conf
-  - name: Enabling Authconfig
+  - name: Authconfig Enabled. Installing Environment Packages...
     command: authconfig --update --enablesssd --enablesssdauth --enablemkhomedir
-  - name: Installing Environment Packages
+  - name: Environment Packages Installed. Configuring IPA Client...
     command: yum install -y ipa-client man-pages
 #    async: 500
 #    poll: 0
@@ -74,7 +74,7 @@
 #    until: job_result.finished
 #    retries: 40  
   - name: Configuring IPA client
-    command: ipa-client-install --enable-dns-updates --force-join --principal admin --server ipa.example.com -w password --hostname=system1.example.com --realm=EXAMPLE.COM --domain=example.com -U
+    command: ipa-client-install --enable-dns-updates --force-join --principal admin --server  ipa.test.example.com -w password --hostname=system1.test.example.com --realm=TEST.EXAMPLE.COM --domain=test.example.com -U
     ignore_errors: yes
     async: 500
     poll: 0
