--- a/playbooks/system2.yml
+++ b/playbooks/system2.yml
@@ -3,14 +3,8 @@
   strategy: free 
   gather_facts: False
   tasks:
-  - name: Setting up user
-    user:
-      name: user
-      comment: user
-      uid: 2000
-      group: wheel
   - name: Changing User Password
-    command: echo password | sudo passwd user --stdin
+    command: echo vagrant | sudo passwd vagrant --stdin
   - name: Building Repo File
     blockinfile:
       path: /etc/yum.repos.d/ipa.repo
