fixed booting filesystem issue, confirm keytab is configured properly

--- a/playbooks/ipa.yml
+++ b/playbooks/ipa.yml
@@ -47,7 +47,7 @@
 #    until: job_result.finished
 #    retries: 16
   - name: IPA server Configured.
-    command: sudo ipa-server-install --setup-dns --allow-zone-overlap --auto-reverse -a 'password' --hostname=ipa.test.example.com -r TEST.EXAMPLE.COM -p 'password' -n test.example.com -U --forwarder 8.8.8.8
+    command: sudo ipa-server-install --setup-dns --allow-zone-overlap --auto-reverse -a 'password' --hostname ipa.test.example.com -r TEST.EXAMPLE.COM -p 'password' -n test.example.com -U --forwarder 8.8.8.8
     ignore_errors: yes
 #    async: 1000
 #    poll: 0
