added post deployment message

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,7 +5,7 @@ stdout_callback = yaml
 scp_if_ssh = true
 system_warnings = false
 command_warnings = false
-callback_whitelist = profile_tasks
+#callback_whitelist = profile_tasks
 forks = 10
 force_handlers = True
 [ssh_connection]
