added post deployment message

--- a/playbooks/kerberos.yml
+++ b/playbooks/kerberos.yml
@@ -80,3 +80,5 @@
         - 'LDAP Users'
         - '- Username = dave, lisa'
         - '- Password = password'
+        - 'Repo is available to use from `http://ipa.test.example.com/rpms`'
+        - '- Happy Studying!'
