--- a/playbooks/master.yml
+++ b/playbooks/master.yml
@@ -1,5 +1,6 @@
 ---
 - import_playbook: ipa.yml
+- import_playbook: repo.yml
 - import_playbook: system1.yml
 - import_playbook: system2.yml
 - import_playbook: kerberos.yml
