--- a/ansible.cfg
+++ b/ansible.cfg
@@ -10,6 +10,7 @@ forks = 10
 force_handlers = True
 [ssh_connection]
 pipelining = True
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null -o IdentitiesOnly=yes
 [privilege_escalation]
 become= True
 become_method = sudo
