--- a/playbooks/system2.yml
+++ b/playbooks/system2.yml
@@ -2,9 +2,10 @@
 - hosts: system2
   strategy: free
   gather_facts: False
+  become: true
   tasks:
-  - name: Changing User Password
-    shell: echo vagrant | sudo passwd vagrant --stdin
+#  - name: Changing User Password
+#    shell: echo vagrant | sudo passwd vagrant --stdin
   - name: Creating Temporary Repo File
     file:
       path: /etc/yum.repos.d/ipa.repo
@@ -24,6 +25,8 @@
   - name: Disabling services
     selinux:
       state: disabled
+#  - name: Passively Disabling SELinux
+#    shell: setenforce 0
   - name: Fixing hosts file
     lineinfile:
       dest: /etc/hosts
@@ -39,6 +42,11 @@
       path: /etc/hosts
       line: 192.168.55.20  ipa.test.example.com ipa
       create: yes
+  - name: Adding Repo address to hosts file
+    lineinfile:
+      path: /etc/hosts
+      line: 192.168.55.19  repo.test.example.com repo
+      create: yes
   - name: Adding system1 IP address to hosts file
     lineinfile:
       path: /etc/hosts
@@ -51,8 +59,8 @@
       create: yes
   - name: Configuring network
     command: nmcli con mod "System enp0s8" ipv4.addresses "192.168.55.22/24 192.168.55.1" ipv4.dns 192.168.55.20 ipv4.dns-search test.example.com ipv4.method manual
-  - name: Saving network config
-    command: nmcli con up "System enp0s8" 
+#  - name: Saving network config
+#    command: nmcli con up "System enp0s8" 
   - name: Fixing Resolv File
     command: echo 'nameserver 192.168.55.20' > /etc/resolv.conf
   - name: Authconfig Enabled. Installing Environment Packages...
@@ -85,6 +93,45 @@
     register: job_result
     until: job_result.finished
     retries: 40
-  - name: Rebooting machine
-    reboot:
-      reboot_timeout: 80
+#  - name: Rebooting machine
+#    reboot:
+#      reboot_timeout: 80
+  - name: Creating Welcome Message
+    file:
+      path: /etc/profile.d/welcome.sh
+      state: touch
+      mode: 0755
+  - name: Building Welcome Message
+    blockinfile:
+      dest: /etc/profile.d/welcome.sh
+      block: |
+         #!/bin/bash
+         #
+         echo -e '
+         #          _     _        _        _         _           _          _   _         _       
+         #         / /\  /\ \     /\_\     / /\      /\ \        /\ \       /\_\/\_\ _   /\ \      
+         #        / /  \ \ \ \   / / /    / /  \     \_\ \      /  \ \     / / / / //\_\/  \ \     
+         #       / / /\ \_\ \ \_/ / /    / / /\ \__  /\__ \    / /\ \ \   /\ \/ \ \/ / / /\ \ \    
+         #      / / /\ \___\ \___/ /    / / /\ \___\/ /_ \ \  / / /\ \_\ /  \____\__/ /\/_/\ \ \   
+         #      \ \ \ \/___/\ \ \_/     \ \ \ \/___/ / /\ \ \/ /_/_ \/_// /\/________/     / / /   
+         #       \ \ \       \ \ \       \ \ \    / / /  \/_/ /____/\  / / /\/_// / /     / / /    
+         #   _    \ \ \       \ \ \  _    \ \ \  / / /     / /\____\/ / / /    / / /     / / /  _  
+         #  /_/\__/ / /        \ \ \/_/\__/ / / / / /     / / /______/ / /    / / /     / / /_/\_\ 
+         #  \ \/___/ /          \ \_\ \/___/ / /_/ /     / / /_______\/_/    / / /     / /_____/ / 
+         #   \_____\/            \/_/\_____\/  \_\/      \/__________/       \/_/      \________/  
+         '"#
+         # You are logged into `hostname` as the `whoami` user
+         # This system is running `cat /etc/redhat-release`
+         # kernel is `uname -r`
+         #
+         # For root - use \`sudo\` or \`sudo su -\`
+         # Repo is available to use from http://repo.test.example.com/rpms
+         # Keytab is provided on http://ipa.test.example.com/system.keytab
+         #
+         # TEST.EXAMPLE.com realm has been configured already, there are also two additional NICs.
+         # 
+         # LDAP Users (Can be easily accessed from root user)
+         # Usernames = dave, lisa
+         # Passwords = password
+         "
+...
