--- a/playbooks/system2.yml
+++ b/playbooks/system2.yml
@@ -4,8 +4,8 @@
   gather_facts: False
   become: true
   tasks:
-#  - name: Changing User Password
-#    shell: echo vagrant | sudo passwd vagrant --stdin
+  - name: Setting Hostname
+    command: hostnamectl set-hostname system2.test.example.com
   - name: Creating Temporary Repo File
     file:
       path: /etc/yum.repos.d/ipa.repo
@@ -25,8 +25,6 @@
   - name: Disabling services
     selinux:
       state: disabled
-#  - name: Passively Disabling SELinux
-#    shell: setenforce 0
   - name: Fixing hosts file
     lineinfile:
       dest: /etc/hosts
@@ -59,22 +57,12 @@
       create: yes
   - name: Configuring network
     command: nmcli con mod "System enp0s8" ipv4.addresses "192.168.55.22/24 192.168.55.1" ipv4.dns 192.168.55.20 ipv4.dns-search test.example.com ipv4.method manual
-#  - name: Saving network config
-#    command: nmcli con up "System enp0s8" 
   - name: Fixing Resolv File
     command: echo 'nameserver 192.168.55.20' > /etc/resolv.conf
   - name: Authconfig Enabled. Installing Environment Packages...
     command: authconfig --update --enablesssd --enablesssdauth --enablemkhomedir
   - name: Environment Packages Installed. Configuring IPA Client...
     command: yum install -y ipa-client man-pages
-#    async: 500
-#    poll: 0
-#    register: yum_sleeper
-#  - name: Finishing Environment Package Installation Before IPA Client Configuration
-#    async_status: jid={{ yum_sleeper.ansible_job_id }}
-#    register: job_result
-#    until: job_result.finished
-#    retries: 40  
   - name: Configuring IPA client
     command: ipa-client-install --enable-dns-updates --force-join --mkhomedir --principal admin --server  ipa.test.example.com -w password --hostname system2.test.example.com --realm TEST.EXAMPLE.COM --domain test.example.com -U
     ignore_errors: yes
@@ -93,9 +81,6 @@
     register: job_result
     until: job_result.finished
     retries: 40
-#  - name: Rebooting machine
-#    reboot:
-#      reboot_timeout: 80
   - name: Creating Welcome Message
     file:
       path: /etc/profile.d/welcome.sh
