--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,12 +5,14 @@ stdout_callback = yaml
 scp_if_ssh = true
 system_warnings = false
 command_warnings = false
+gathering = smart
 #callback_whitelist = profile_tasks
 forks = 10
 force_handlers = True
 [ssh_connection]
+retries = 3
 pipelining = True
-ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null -o IdentitiesOnly=yes
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null -o IdentitiesOnly=yes -o StrictHostKeyChecking=no
 [privilege_escalation]
 become= True
 become_method = sudo
