--- a/playbooks/ipa.yml
+++ b/playbooks/ipa.yml
@@ -47,9 +47,10 @@
   - name: Packages Installed. Configuring IPA server...(Est. Time - 7 minutes)
     yum:
       name:
+        - vsftpd
+        - bind-dyndb-ldap
         - ipa-server
         - ipa-server-dns
-        - vsftpd
       state: present
   - name: IPA server Configured.
     command: ipa-server-install --setup-dns --allow-zone-overlap --auto-reverse -a 'password' --hostname ipa.test.example.com -r TEST.EXAMPLE.COM -p 'password' -n test.example.com -U --forwarder 8.8.8.8
