--- a/playbooks/system2.yml
+++ b/playbooks/system2.yml
@@ -6,22 +6,6 @@
   tasks:
   - name: Setting Hostname
     command: hostnamectl set-hostname system2.test.example.com
-  - name: Creating Temporary Repo File
-    file:
-      path: /etc/yum.repos.d/ipa.repo
-      state: touch
-      mode: 0755
-  - name: Building Repo File
-    blockinfile:
-      dest: /etc/yum.repos.d/ipa.repo
-      block: |
-       [ipa]
-       name=ipa repo
-       baseurl=http://reflector.westga.edu/repos/CentOS/7/os/x86_64/
-       gpgcheck=1
-       gpgkey=http://reflector.westga.edu/repos/CentOS/7/os/x86_64/RPM-GPG-KEY-CentOS-7
-       enabled=1
-    tags: repo
   - name: Disabling services
     selinux:
       state: disabled
@@ -59,10 +43,8 @@
     command: nmcli con mod "System enp0s8" ipv4.addresses "192.168.55.22/24 192.168.55.1" ipv4.dns 192.168.55.20 ipv4.dns-search test.example.com ipv4.method manual
   - name: Fixing Resolv File
     command: echo 'nameserver 192.168.55.20' > /etc/resolv.conf
-  - name: Authconfig Enabled. Installing Environment Packages...
+  - name: Authconfig Enabled. Configuring IPA Client...
     command: authconfig --update --enablesssd --enablesssdauth --enablemkhomedir
-  - name: Environment Packages Installed. Configuring IPA Client...
-    command: yum install -y ipa-client man-pages
   - name: Configuring IPA client
     command: ipa-client-install --enable-dns-updates --force-join --mkhomedir --principal admin --server  ipa.test.example.com -w password --hostname system2.test.example.com --realm TEST.EXAMPLE.COM --domain test.example.com -U
     ignore_errors: yes
