--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,6 +8,7 @@ command_warnings = false
 gathering = smart
 #callback_whitelist = profile_tasks
 forks = 10
+remote_tmp     = ~/.ansible/tmp
 force_handlers = True
 [ssh_connection]
 retries = 3
@@ -18,3 +19,17 @@ become= True
 become_method = sudo
 become_user = root
 become_ask_pass = False
+[colors]
+#highlight = white
+verbose = blue
+warn = bright purple
+#error = red
+#debug = dark gray
+deprecate = purple
+#skip = cyan
+#unreachable = red
+ok = green
+changed = yellow
+#diff_add = green
+#diff_remove = red
+#diff_lines = cyan
