added apache test resources

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -10,6 +10,7 @@ gathering = smart
 forks = 10
 remote_tmp     = ~/.ansible/tmp
 force_handlers = True
+timeout = 30
 [ssh_connection]
 retries = 3
 pipelining = True
